--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "neo4j": "^2.0.0-RC2",
+    "neo4j-driver": "^4.0.2",
     "require-dir": "^1.2.0"
   },
   "devDependencies": {
